费用类型管理模块回显完成

--- a/views/costType.html
+++ b/views/costType.html
@@ -53,19 +53,19 @@
                 <div style="background:#ffffff;" class="clearfix">
                     <div class="search_text_div">
                         <sapn class="text-content">费用类型：</sapn>
-                        <input type="text" class="search_text" readonly="readonly">
+                        <input type="text" class="search_text" id="cost_type_desc" readonly="readonly">
                         <input style="display: none" id="cost_type_code" readonly="readonly">
                         <button class="search_btn glyphicon glyphicon-search" data-toggle="modal" data-target="#mnue_tree" onclick="mnueTreeInModel(this)"></button>
                     </div>
                     <div class="search_text_div">
                         <sapn class="text-content">公司类型：</sapn>
-                        <input type="text" class="search_text" readonly="readonly">
+                        <input type="text" class="search_text" id="company_type_desc" readonly="readonly">
                         <input style="display: none" type="text" id="company_type_code" readonly="readonly">
                         <button class="search_btn glyphicon glyphicon-search" data-toggle="modal" data-target="#mnue_tree" onclick="mnueTreeInModel(this)"></button>
                     </div>
                     <div class="search_text_div">
                         <sapn class="text-content">职级：</sapn>
-                        <input type="text" class="search_text" readonly="readonly">
+                        <input type="text" class="search_text" id="level_desc" readonly="readonly">
                         <input style="display: none" type="text" id="level_code" readonly="readonly">
                         <button class="search_btn glyphicon glyphicon-search" data-toggle="modal" data-target="#mnue_tree" onclick="mnueTreeInModel(this)"></button>
                     </div>
@@ -104,7 +104,7 @@
                 <td class="text-center"><%= costTypeJsonArray[i].costTypeDesc %></td>
                 <td class="text-center"><%= costTypeJsonArray[i].ceilCost %></td>
                 <td class="text-center">
-                    <a href="javascript:;" class="btn btn-default btn-xs cost_type_edit" data-code="<%= costTypeJsonArray[i].costTypeDesc %>@<%= costTypeJsonArray[i].companyTypeCode %>@<%= costTypeJsonArray[i].level %>">编辑</a>
+                    <a href="javascript:;" class="btn btn-default btn-xs cost_type_edit" data-desc="<%= costTypeJsonArray[i].costDesc %>@<%= costTypeJsonArray[i].companyTypeDesc %>@<%= costTypeJsonArray[i].levelDesc %>" data-code="<%= costTypeJsonArray[i].costTypeCode %>@<%= costTypeJsonArray[i].companyTypeCode %>@<%= costTypeJsonArray[i].level %>">编辑</a>
                     <a href="javascript:;" class="btn btn-danger btn-xs cost_type_delete"
                        data-no="<%= costTypeJsonArray[i].costTypeCode %>">删除</a>
                 </td>
