--- a/public/css/tripRecord/costType.less
+++ b/public/css/tripRecord/costType.less
@@ -49,6 +49,9 @@
         margin-top: 10px;
         padding: 10px;
         background: #ffffff;
+        .cost_type_div{
+          display: none;
+        }
         .add {
           background: lightgray;
           margin-top: 20px;
