--- a/public/css/tripRecord/costType.less
+++ b/public/css/tripRecord/costType.less
@@ -80,4 +80,22 @@
       }
     }
   }
+  .cost-manger-tree{
+    ul.type-list{
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      li{
+        padding: 8px;
+        background: #eeeeee;
+        border-radius: 3px;
+        margin-bottom: 10px;
+      }
+      li:hover{
+        cursor: pointer;
+        background: lightblue;
+        color: white;
+      }
+    }
+  }
 }
