--- a/views/costType.html
+++ b/views/costType.html
@@ -100,7 +100,7 @@
         <span class="glyphicon glyphicon-refresh loading"></span>
     </div>
     <!-- Modal -->
-    <div class="modal fade company-manger-tree" id="modal_tree" tabindex="-1">
+    <div class="modal fade cost-manger-tree" id="modal_tree" tabindex="-1">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -108,7 +108,7 @@
                     <h4 class="modal-title" >公司列表</h4>
                 </div>
                 <div class="modal-body">
-                    <ul class="model-manger">
+                    <ul class="type-list">
 
                     </ul>
                 </div>
@@ -122,8 +122,7 @@
     <script src="/public/js/bussnessTrip/CostType.js"></script>
     <script type="text/javascript" id="template">{{dataJsonArr}}</script>
     <script type="text/art-template" id="costsList">
-        <% for(var i = 0;i
-        <costTypeJsonArray.length ;i++){ %>
+        <% for(var i = 0;i<costTypeJsonArray.length ;i++){ %>
             <tr>
                 <td class="text-center"><%= costTypeJsonArray[i].costTypeCode %></td>
                 <td class="text-center"><%= costTypeJsonArray[i].costDesc %>（<%= costTypeJsonArray[i].costTypeDesc %>）</td>
@@ -137,6 +136,13 @@
                 </td>
             </tr>
             <% } %>
+    </script>
+    <script type="text/art-template" id="typeList">
+        <% if(returnData){ %>
+        <% for(var i = 0;i<returnData.length ;i++){ %>
+            <li class="type-item" data-cost-code="<%=  returnData[i].code %>" onclick="showInfo('<%= returnData[i].queryType %>')"><%= returnData[i].descr %></li>
+        <% } %>
+        <% } %>
     </script>
     <script>NProgress.done()</script>
 </body>
