--- a/views/costType.html
+++ b/views/costType.html
@@ -140,7 +140,7 @@
     <script type="text/art-template" id="typeList">
         <% if(returnData){ %>
         <% for(var i = 0;i<returnData.length ;i++){ %>
-            <li class="type-item" data-cost-code="<%=  returnData[i].code %>" onclick="showInfo('<%= returnData[i].queryType %>')"><%= returnData[i].descr %></li>
+            <li class="type-item" data-cost-code="<%=  returnData[i].code %>" onclick="showInfo('<%= returnData[i].queryType %>',this)"><%= returnData[i].descr %></li>
         <% } %>
         <% } %>
     </script>
