--- a/public/css/tripRecord/costType.less
+++ b/public/css/tripRecord/costType.less
@@ -9,7 +9,7 @@
   }
   .cost-content{
     #cost_modify {
-      #cost-search{
+      .cost-search{
         display: inline-block;
         float: left;
         margin-top: 10px;
@@ -76,6 +76,66 @@
         .add:hover {
           background: lightblue;
           cursor: pointer;
+        }
+      }
+    }
+    #cost_add{
+      .text-content{
+        float: left;
+      }
+      .btn_group {
+        width: 50%;
+        #cost-standard-add{
+          float: right;
+          margin-top: 10px;
+          margin-right: 15px;
+        }
+        #back {
+          float: right;
+          margin-top: 10px;
+        }
+      }
+      .search_text_div{
+        background: #ffffff;
+        line-height: 25px;
+        padding:20px 0 20px 0;
+        border-bottom: 1px dashed lightgray;
+        .max_amount_view{
+          height: 25px;
+          float: left;
+          border-width: 1px;
+          border-style: solid;
+          border-color: #cccccc;
+          font-size: 12px;
+          padding-left: 5px;
+          border-radius: 3px 0 0 3px;
+        }
+        .text-content{
+          display: block;
+          width: 40%;
+          text-align: right;
+          margin-right: 10px;
+        }
+        input.search_text {
+          height: 25px;
+          float: left;
+          border-width: 1px;
+          border-style: solid;
+          border-color: #cccccc;
+          font-size: 12px;
+          padding-left: 5px;
+          border-right: none;
+          border-radius: 3px 0 0 3px;
+          background-color: #f3f3f3;
+        }
+        button.search_btn {
+          height: 25px;
+          float: left;
+          top: 0px;
+          background-color: #fff;
+          padding: 0;
+          border: 1px solid #cccccc;
+          width: 40px;
         }
       }
     }
