--- a/views/costType.html
+++ b/views/costType.html
@@ -23,13 +23,13 @@
     </nav>
     <div class="container-fluid">
         <div class="page-title">
-            <h1>费用类型管理</h1>
+            <h1>费用标准管理</h1>
         </div>
         <ul class="nav nav-tabs cost-tabs" role="tablist">
-            <li role="presentation" class="active cost_list_li"><a href="#cost_list" id="cost-list" data-toggle="tab">费用类型列表</a>
+            <li role="presentation" class="active cost_list_li"><a href="#cost_list" id="cost-list" data-toggle="tab">费用标准列表</a>
             </li>
-            <li role="presentation" class="cost_modify_li"><a href="#cost_modify" id="cost-modify" data-toggle="tab">费用类型修改</a></li>
-            <li role="presentation" class="cost_add_li"><a href="#cost_add" id="cost-add" data-toggle="tab">费用类型添加</a></li>
+            <li role="presentation" class="cost_modify_li"><a href="#cost_modify" id="cost-modify" data-toggle="tab">费用标准修改</a></li>
+            <li role="presentation" class="cost_add_li"><a href="#cost_add" id="cost-add" data-toggle="tab">费用标准添加</a></li>
         </ul>
         <div class="tab-content cost-content">
             <div class="tab-pane active" id="cost_list">
@@ -73,7 +73,7 @@
                         <button class="search_btn glyphicon glyphicon-search" data-toggle="modal"
                                 data-target="#modal_tree" onclick="showModal('ZJ')"></button>
                     </div>
-                    <button type="button" class="btn btn-info" id="cost-search">查询</button>
+                    <button type="button" class="btn btn-info cost-search">查询</button>
                 </div>
                 <div class="cost_type_list">
                     <div class="cost_type_div">
@@ -81,14 +81,45 @@
                         <span>上限金额：</span><input type="number" id="cost_type_max_count_modify" placeholder="请输入要修改的上限金额">
                         <button type="button" class="btn btn-info" id="cost-type-modify">修改</button>
                     </div>
-                    <div type="button" class="add">
-                        <span class="add_font glyphicon glyphicon-plus"></span>
-                        <span class="add_text">添加记录</span>
-                    </div>
                 </div>
             </div>
             <div class="tab-pane" id="cost_add">
-
+                <div style="background:#ffffff;" class="clearfix">
+                    <div class="search_text_div clearfix">
+                        <span class="text-content">费用类型：</span>
+                        <input type="text" class="search_text cost_type_desc_view"  readonly="readonly">
+                        <input style="display: none" class="cost_type_code_view" readonly="readonly">
+                        <button class="search_btn glyphicon glyphicon-search" data-toggle="modal"
+                                data-target="#modal_tree" onclick="showModal('FY')"></button>
+                        <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
+                    </div>
+                    <div class="search_text_div clearfix">
+                        <sapn class="text-content">公司类型：</sapn>
+                        <input type="text" class="search_text company_type_desc_view"  readonly="readonly">
+                        <input style="display: none" type="text" class="company_type_code_view" readonly="readonly">
+                        <button class="search_btn glyphicon glyphicon-search" data-toggle="modal"
+                                data-target="#modal_tree" onclick="showModal('GS')"></button>
+                        <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
+                    </div>
+                    <div class="search_text_div clearfix">
+                        <sapn class="text-content">职&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;级：</sapn>
+                        <div class="view">
+                            <input type="text" class="search_text level_desc_view"  readonly="readonly">
+                            <input style="display: none" type="text" class="level_code_view" readonly="readonly">
+                            <button class="search_btn glyphicon glyphicon-search" data-toggle="modal"
+                                    data-target="#modal_tree" onclick="showModal('ZJ')"></button>
+                            <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
+                        </div>
+                    </div>
+                    <div class="search_text_div clearfix">
+                        <sapn class="text-content">上限金额：</sapn>
+                            <input type="number" class="max_amount_view">
+                            <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
+                    </div>
+                    <div class="btn_group">
+                        <button type="button" class="btn btn-info" id="cost-standard-add">新增</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -126,19 +157,21 @@
     <script src="/public/js/bussnessTrip/CostType.js"></script>
     <script type="text/javascript" id="template">{{dataJsonArr}}</script>
     <script type="text/art-template" id="costsList">
-        <% for(var i = 0;i<costTypeJsonArray.length ;i++){ %>
-            <tr>
-                <td class="text-center"><%= costTypeJsonArray[i].costTypeCode %></td>
-                <td class="text-center"><%= costTypeJsonArray[i].costDesc %>（<%= costTypeJsonArray[i].costTypeDesc %>）</td>
-                <td class="text-center"><%= costTypeJsonArray[i].ceilCost %></td>
-                <td class="text-center">
-                    <a href="javascript:;" class="btn btn-default btn-xs cost_type_edit"
-                       data-desc="<%= costTypeJsonArray[i].costDesc %>@<%= costTypeJsonArray[i].companyTypeDesc %>@<%= costTypeJsonArray[i].levelDesc %>"
-                       data-code="<%= costTypeJsonArray[i].costTypeCode %>@<%= costTypeJsonArray[i].companyTypeCode %>@<%= costTypeJsonArray[i].LEVEL %>">编辑</a>
-                    <a href="javascript:;" class="btn btn-danger btn-xs cost_type_delete"
-                       data-no="<%= costTypeJsonArray[i].costTypeCode %>">删除</a>
-                </td>
-            </tr>
+        <% if(costTypeJsonArray) {%>
+            <% for(var i = 0;i<costTypeJsonArray.length ;i++){ %>
+                <tr>
+                    <td class="text-center"><%= costTypeJsonArray[i].costTypeCode %></td>
+                    <td class="text-center"><%= costTypeJsonArray[i].costDesc %>（<%= costTypeJsonArray[i].costTypeDesc %>）</td>
+                    <td class="text-center"><%= costTypeJsonArray[i].ceilCost %></td>
+                    <td class="text-center">
+                        <a href="javascript:;" class="btn btn-default btn-xs cost_type_edit"
+                           data-desc="<%= costTypeJsonArray[i].costDesc %>@<%= costTypeJsonArray[i].companyTypeDesc %>@<%= costTypeJsonArray[i].levelDesc %>"
+                           data-code="<%= costTypeJsonArray[i].costTypeCode %>@<%= costTypeJsonArray[i].companyTypeCode %>@<%= costTypeJsonArray[i].LEVEL %>">编辑</a>
+                        <a href="javascript:;" class="btn btn-danger btn-xs cost_type_delete"
+                           data-no="<%= costTypeJsonArray[i].costTypeCode %>">删除</a>
+                    </td>
+                </tr>
+                <% } %>
             <% } %>
     </script>
     <script type="text/art-template" id="typeList">
