费用类型修改完成

--- a/public/css/tripRecord/costMaintenance.less
+++ b/public/css/tripRecord/costMaintenance.less
@@ -9,6 +9,9 @@
   }
   .cost-content{
     #cost_modify {
+      #cost_type_desc_modify{
+        padding: 3px;
+      }
       .cost-search{
         display: inline-block;
         float: left;
