--- a/views/costMaintenance.html
+++ b/views/costMaintenance.html
@@ -58,26 +58,11 @@
                         <button class="search_btn glyphicon glyphicon-search" data-toggle="modal"
                                 data-target="#modal_tree" onclick="showModal('FY')"></button>
                     </div>
-                    <div class="search_text_div">
-                        <sapn class="text-content">公司类型：</sapn>
-                        <input type="text" class="search_text company_type_desc_view"  readonly="readonly">
-                        <input style="display: none" type="text" class="company_type_code_view" readonly="readonly">
-                        <button class="search_btn glyphicon glyphicon-search" data-toggle="modal"
-                                data-target="#modal_tree" onclick="showModal('GS')"></button>
-                    </div>
-                    <div class="search_text_div">
-                        <sapn class="text-content">职级：</sapn>
-                        <input type="text" class="search_text level_desc_view"  readonly="readonly">
-                        <input style="display: none" type="text" class="level_code_view" readonly="readonly">
-                        <button class="search_btn glyphicon glyphicon-search" data-toggle="modal"
-                                data-target="#modal_tree" onclick="showModal('ZJ')"></button>
-                    </div>
                     <button type="button" class="btn btn-info cost-search">查询</button>
                 </div>
                 <div class="cost_type_list">
                     <div class="cost_type_div">
                        <span> 费用类型名称：</span><input type="text" id="cost_type_desc_modify" placeholder="请输入要修改的名称">
-                        <span>上限金额：</span><input type="number" id="cost_type_max_count_modify" placeholder="请输入要修改的上限金额">
                         <button type="button" class="btn btn-info" id="cost-type-modify">修改</button>
                     </div>
                 </div>
@@ -163,7 +148,7 @@
                     <td class="text-center"><%= costTypeJsonArray[i].costTypeDesc %></td>
                     <td class="text-center">
                         <a href="javascript:;" class="btn btn-default btn-xs cost_type_edit"
-                           data-code="<%= costTypeJsonArray[i].costTypeCode %>">编辑</a>
+                           data-code="<%= costTypeJsonArray[i].costTypeCode %>@<%= costTypeJsonArray[i].costTypeDesc %>">编辑</a>
                         <a href="javascript:;" class="btn btn-danger btn-xs cost_type_delete"
                            data-code="<%= costTypeJsonArray[i].costTypeCode %>">删除</a>
                     </td>
