--- a/public/css/tripRecord/costMaintenance.less
+++ b/public/css/tripRecord/costMaintenance.less
@@ -127,9 +127,8 @@
           border-color: #cccccc;
           font-size: 12px;
           padding-left: 5px;
-          border-right: none;
+          //border-right: none;
           border-radius: 3px 0 0 3px;
-          background-color: #f3f3f3;
         }
         button.search_btn {
           height: 25px;
