--- a/views/costMaintenance.html
+++ b/views/costMaintenance.html
@@ -70,35 +70,14 @@
             <div class="tab-pane" id="cost_add">
                 <div style="background:#ffffff;" class="clearfix">
                     <div class="search_text_div clearfix">
-                        <span class="text-content">费用类型：</span>
-                        <input type="text" class="search_text cost_type_desc_view"  readonly="readonly">
-                        <input style="display: none" class="cost_type_code_view" readonly="readonly">
-                        <button class="search_btn glyphicon glyphicon-search" data-toggle="modal"
-                                data-target="#modal_tree" onclick="showModal('FY')"></button>
+                        <span class="text-content">费用类型代码：</span>
+                        <input  class="search_text cost_type_code_view">
                         <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                     </div>
                     <div class="search_text_div clearfix">
-                        <sapn class="text-content">公司类型：</sapn>
-                        <input type="text" class="search_text company_type_desc_view"  readonly="readonly">
-                        <input style="display: none" type="text" class="company_type_code_view" readonly="readonly">
-                        <button class="search_btn glyphicon glyphicon-search" data-toggle="modal"
-                                data-target="#modal_tree" onclick="showModal('GS')"></button>
+                        <sapn class="text-content">费用类型描述：</sapn>
+                        <input type="text" class="search_text company_type_desc_view">
                         <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
-                    </div>
-                    <div class="search_text_div clearfix">
-                        <sapn class="text-content">职&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;级：</sapn>
-                        <div class="view">
-                            <input type="text" class="search_text level_desc_view"  readonly="readonly">
-                            <input style="display: none" type="text" class="level_code_view" readonly="readonly">
-                            <button class="search_btn glyphicon glyphicon-search" data-toggle="modal"
-                                    data-target="#modal_tree" onclick="showModal('ZJ')"></button>
-                            <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
-                        </div>
-                    </div>
-                    <div class="search_text_div clearfix">
-                        <sapn class="text-content">上限金额：</sapn>
-                            <input type="number" class="max_amount_view">
-                            <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                     </div>
                     <div class="btn_group">
                         <button type="button" class="btn btn-info" id="cost-standard-add">新增</button>
