费用金额删除功能完成

--- a/views/bxManger.html
+++ b/views/bxManger.html
@@ -146,6 +146,8 @@
                     data-id="<%= returnData[i].id %>" data-amount="<%= returnData[i].amount %>"
                     onclick="showCostInfo(this)"><%= returnData[i].costDesc%>：<%=
                     returnData[i].amount%>元
+                    <span class="type_delete glyphicon glyphicon-remove over"></span>
+
                 </li>
                 <% } %>
                 <% } %>
