--- a/public/css/tripRecord/bxManger.less
+++ b/public/css/tripRecord/bxManger.less
@@ -1,42 +1,42 @@
-.orders{
-  table{
-    th.text-center{
+.orders {
+  table {
+    th.text-center {
       font-weight: bold;
     }
     td {
       font-size: 13px !important;
     }
   }
-  .order-content{
-    .search_text{
+  .order-content {
+    .search_text {
       padding: 15px;
       background: #ffffff;
-      input{
+      input {
         padding: 3px;
         border-radius: 1px;
       }
-      #order-search{
+      #order-search {
         margin-left: 5px;
       }
     }
-    .cost_type_list{
+    .cost_type_list {
       margin-top: 10px;
       padding: 10px;
       background: #ffffff;
-      .add{
+      .add {
         background: lightgray;
         margin-top: 20px;
         border-radius: 5px;
         text-align: center;
         position: relative;
-        .add_font{
+        .add_font {
           position: absolute;
           left: 10px;
           font-size: x-large;
           color: white;
-          top:5px;
+          top: 5px;
         }
-        .add_text{
+        .add_text {
           height: 35px;
           line-height: 35px;
           color: white;
@@ -44,15 +44,15 @@
           display: inline-block;
         }
       }
-      .add:hover{
+      .add:hover {
         background: lightblue;
         cursor: pointer;
       }
-      .cost_type_list_items{
-        .list-group-item{
-            font-weight: bold;
+      .cost_type_list_items {
+        .list-group-item {
+          font-weight: bold;
         }
-        .list-group-item:hover{
+        .list-group-item:hover {
           background: lightblue;
           color: white;
           cursor: pointer;
@@ -60,15 +60,15 @@
       }
     }
   }
-  .modal-body{
+  .modal-body {
     padding: 0;
     text-align: center;
-    .order-manger-model{
+    .order-manger-model {
       margin-left: 15px;
       padding-top: 20px;
     }
     .line_content {
-      padding:20px 10px;
+      padding: 20px 10px;
       .search_text_div_tip {
         width: 40%;
         float: left;
@@ -91,7 +91,7 @@
           border-radius: 3px 0 0 3px;
           background-color: #f3f3f3;
         }
-        input.amount{
+        input.amount {
           height: 25px;
           float: left;
           border-width: 1px;
@@ -113,25 +113,42 @@
       }
     }
   }
-  .cost-type-tree{
-    .cost-body{
+  .cost-type-tree {
+    .cost-body {
       padding: 10px;
-      ul.type-list{
+      ul.type-list {
         list-style: none;
         margin: 0;
         padding: 0;
-        li{
+        li {
+          position: relative;
           padding: 8px;
           background: #eeeeee;
           border-radius: 3px;
           margin-bottom: 10px;
         }
-        li:hover{
+        li:hover {
           cursor: pointer;
           background: lightblue;
           color: white;
         }
       }
     }
+  }
+  .type_delete {
+    float: right;
+    display: block;
+    width: 20px;
+    height: 20px;
+  }
+  .over::after {
+    color: red;
+    font-weight: bold;
+    position: absolute;
+    top:5px;
+    left: 20px;
+    width: 20px;
+    height:20px;
+    display: inline-block;
   }
 }
