--- a/public/css/tripRecord/bxManger.less
+++ b/public/css/tripRecord/bxManger.less
@@ -141,14 +141,8 @@
     width: 20px;
     height: 20px;
   }
-  .over::after {
+  span.over{
     color: red;
     font-weight: bold;
-    position: absolute;
-    top:5px;
-    left: 20px;
-    width: 20px;
-    height:20px;
-    display: inline-block;
   }
 }
