保险列表中显示保险金额

--- a/views/bxManger.html
+++ b/views/bxManger.html
@@ -127,7 +127,7 @@
                 <td class="text-center"><%= ordersJsonArray[i].start_date_str %></td>
                 <td class="text-center"><%= ordersJsonArray[i].end_date_str %></td>
                 <td class="text-center"><%= ordersJsonArray[i].totalDay %></td>
-                <td class="text-center"></td>
+                <td class="text-center"><%= ordersJsonArray[i].bxAmonut %></td>
                 <td class="text-center">
                     <a href="javascript:;" class="btn btn-default btn-xs order_edit"
                        data-no="<%= ordersJsonArray[i].order_no %>">编辑</a>
