--- a/public/css/tripRecord/bxManger.less
+++ b/public/css/tripRecord/bxManger.less
@@ -8,6 +8,49 @@
     }
   }
   .order-content {
+    .search_text_div{
+      background: #ffffff;
+      line-height: 25px;
+      padding:20px 0 20px 0;
+      border-bottom: 1px dashed lightgray;
+      .max_amount_view{
+        height: 25px;
+        float: left;
+        border-width: 1px;
+        border-style: solid;
+        border-color: #cccccc;
+        font-size: 12px;
+        padding-left: 5px;
+        border-radius: 3px 0 0 3px;
+      }
+      .text-content{
+        display: block;
+        width: 40%;
+        text-align: right;
+        margin-right: 10px;
+      }
+      input.search_text {
+        height: 25px;
+        float: left;
+        border-width: 1px;
+        border-style: solid;
+        border-color: #cccccc;
+        font-size: 12px;
+        padding-left: 5px;
+        border-right: none;
+        border-radius: 3px 0 0 3px;
+        background-color: #f3f3f3;
+      }
+      button.search_btn {
+        height: 25px;
+        float: left;
+        top: 0px;
+        background-color: #fff;
+        padding: 0;
+        border: 1px solid #cccccc;
+        width: 40px;
+      }
+    }
     .search_text {
       padding: 15px;
       background: #ffffff;
@@ -57,6 +100,56 @@
           color: white;
           cursor: pointer;
         }
+      }
+    }
+    #order_list{
+      .search_text_div_model{
+        padding: 15px;
+        background: #ffffff;
+        display: inline-block;
+        line-height: 25px;
+        float: left;
+        .text-content-model{
+          float: left;
+        }
+        input.search_text_model {
+          height: 25px;
+          float: left;
+          border-width: 1px;
+          border-style: solid;
+          border-color: #cccccc;
+          font-size: 12px;
+          padding-left: 5px;
+          border-right: none;
+          border-radius: 3px 0 0 3px;
+          background-color: #f3f3f3;
+        }
+        button.search_btn_model {
+          height: 25px;
+          float: left;
+          top: 0px;
+          background-color: #fff;
+          padding: 0;
+          border: 1px solid #cccccc;
+          width: 40px;
+        }
+        input.date_time{
+          height: 25px;
+          float: left;
+          border-width: 1px;
+          border-style: solid;
+          border-color: #cccccc;
+          font-size: 12px;
+          padding-left: 5px;
+          border-radius: 3px;
+          background-color: #f3f3f3;
+        }
+      }
+      #order-search-content{
+        margin-top: 10px;
+      }
+      .page-action{
+        margin-top: 10px;
       }
     }
   }
@@ -144,5 +237,19 @@
   span.over{
     color: red;
     font-weight: bold;
+  }
+  span.no-content {
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+    margin-right: 10px;
+  }
+  .company-manger-tree {
+      ul {
+        list-style: none;
+        li {
+          padding: 5px 0;
+        }
+    }
   }
 }
