--- a/views/bxManger.html
+++ b/views/bxManger.html
@@ -144,7 +144,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title" id="myModalLabel">功能菜单</h4>
+                    <h4 class="modal-title" id="myModalLabel">公司列表</h4>
                 </div>
                 <div >
                     <ul class="company-manger-model">
