--- a/views/bxManger.html
+++ b/views/bxManger.html
@@ -161,6 +161,7 @@
     <script src="/public/js/bussnessTrip/bxManger.js"></script>
     <script type="text/javascript" id="template">{{dataJsonArr}}</script>
     <script type="text/art-template" id="ordersList">
+        <% if(ordersJsonArray) { %>
         <% for(var i = 0;i
         <ordersJsonArray.length ;i++){ %>
             <tr>
@@ -178,6 +179,7 @@
                        data-no="<%= ordersJsonArray[i].order_no %>">删除</a>
                 </td>
             </tr>
+            <% } %>
             <% } %>
     </script>
     <script type="text/art-template" id="ordersListItems">
