--- a/views/costMaintenance.html
+++ b/views/costMaintenance.html
@@ -63,6 +63,13 @@
                 <div class="cost_type_list">
                     <div class="cost_type_div">
                        <span> 费用类型名称：</span><input type="text" id="cost_type_desc_modify" placeholder="请输入要修改的名称">
+                        <div class="radio-group">
+                            是否固定费用：
+                            <input type="radio" id="is_fix" name="fixed" value="0" checked>
+                            <label for="is_fix">是</label>
+                            <input type="radio" id="not_fix" name="fixed" value="1">
+                            <label for="not_fix">否</label>
+                        </div>
                         <button type="button" class="btn btn-info" id="cost-type-modify">修改</button>
                     </div>
                 </div>
