--- a/public/css/tripRecord/costMaintenance.less
+++ b/public/css/tripRecord/costMaintenance.less
@@ -80,6 +80,14 @@
           background: lightblue;
           cursor: pointer;
         }
+        .radio-group{
+          margin-left: 10px;
+          display: inline-block;
+          margin-right: 10px;
+          .fix_group{
+            display: inline-block;
+          }
+        }
       }
     }
     #cost_add{
