--- a/views/costMaintenance.html
+++ b/views/costMaintenance.html
@@ -84,6 +84,11 @@
                         <input type="text" class="search_text company_type_desc_view">
                         <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                     </div>
+                    <div class="search_text_div fix_group_add clearfix">
+                        <span>是否固定费用：</span>
+                        <div class="fix_cost" style="display: inline-block">
+                        </div>
+                    </div>
                     <div class="btn_group">
                         <button type="button" class="btn btn-info" id="cost-standard-add">新增</button>
                     </div>
