--- a/views/costMaintenance.html
+++ b/views/costMaintenance.html
@@ -85,7 +85,7 @@
                         <span style="color: red;display:inline-block;margin: 5px 0 0 10px">*</span>
                     </div>
                     <div class="search_text_div fix_group_add clearfix">
-                        <span>是否固定费用：</span>
+                        <span class="text-content">是否固定费用：</span>
                         <div class="fix_cost" style="display: inline-block">
                         </div>
                     </div>
